--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html lang="en">
 <head>
 	<!-- Meta Tags -->
-	<!-- Charset, Viewport -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<!-- Title -->
 	<title>Frontend Rootpixel</title>
 
-	<!-- Font Awesome -->
-	<!-- Icon -->
+	<!-- Font Awesome Icon -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-0c38nfCMzF8w8DBI+9nTWzApOpr1z0WuyswL4y6x/2ZTtmj/Ki5TedKeUcFusC/k" crossorigin="anonymous">
 
 	<!-- Flat Icon -->
@@ -23,9 +21,13 @@
 	<link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-	<!-- Header -->
+	<!--==========================
+	Header
+	============================-->
 	<header>
-		<!-- Navbar -->
+		<!--==========================
+		Navbar
+		============================-->
 		<nav class="navbar navbar-expand-lg navbar-light">
 			<div class="container">
 				<a class="navbar-brand" href="">Bioskops</a>
@@ -48,9 +50,13 @@
 				</div>
 			</div>
 		</nav>
-		<!-- Navbar End -->
+		<!--==========================
+		Navbar End
+		============================-->
 
-		<!-- Jumbotron -->
+		<!--==========================
+		Jumbotron
+		============================-->
 		<div class="jumbotron jumbotron-fluid bg-transparent">
 			<div class="container">
 				<nav class="nav">
@@ -65,13 +71,21 @@
 				</div>
 			</div>
 		</div>
-		<!-- Jumbotron End -->
+		<!--==========================
+		Jumbotron End
+		============================-->
 	</header>
-	<!-- Header End -->
+	<!--==========================
+	Header End
+	============================-->
 
-	<!-- Main -->
+	<!--==========================
+	Main
+	============================-->
 	<main>
-		<!-- Schedule -->
+		<!--==========================
+		Schedule
+		============================-->
 		<section id="schedule">
 			<!-- Schedule Card -->
 			<section class="schedule-card">
@@ -210,9 +224,13 @@
 			</section>
 			<!-- Schedule List End -->
 		</section>
-		<!-- Schedule End -->
+		<!--==========================
+		Schedule End
+		============================-->
 
-		<!-- Synopsis -->
+		<!--==========================
+		Synopsis
+		============================-->
 		<div class="synopsis-image">
 			<div class="synopsis">
 				<!-- Synopsis Overview-->
@@ -316,9 +334,13 @@
 				<!-- Synopsis Slider End -->
 			</div>
 		</div>
-		<!-- Synopsis End -->
+		<!--==========================
+		Synopsis End
+		============================-->
 
-		<!-- Facilities -->
+		<!--==========================
+		Facilities
+		============================-->
 		<div class="facilities-image">
 			<div class="facilities">
 				<div class="container">
@@ -382,19 +404,29 @@
 				</div>
 			</div>
 		</div>
-		<!-- Facilities End -->
+		<!--==========================
+		Facilities End
+		============================-->
 
-		<!-- Maps -->
+		<!--==========================
+		Maps
+		============================-->
 		<section class="maps">
 			<div class="container-fluid embed-responsive embed-responsive-21by9" style="height: 500px">
 				<iframe style="height: 500px" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.241647226428!2d106.82485951501056!3d-6.362763795395706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69ec1a804e8b85%3A0xd7bf80e1977cea07!2sUniversity+of+Indonesia!5e0!3m2!1sen!2sid!4v1566056575205!5m2!1sen!2sid" width="100%" allowfullscreen></iframe>
 			</div>
 		</section>
-		<!-- Maps End -->
+		<!--==========================
+		Maps End
+		============================-->
 	</main>
-	<!-- Main End -->
+	<!--==========================
+	Main End
+	============================-->
 
-	<!-- Footer -->
+	<!--==========================
+	Footer
+	============================-->
 	<div class="footer-image">
 		<footer>
 			<div class="container">
@@ -461,7 +493,9 @@
 			</div>
 		</footer>
 	</div>
-	<!-- Footer End -->
+	<!--==========================
+	Footer End
+	============================-->
 	
 	<!-- Optional JavaScript -->
 	<!-- jQuery, Popper, Bootstrap -->
