Fix Schedule: issues #3 & #4

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<div class="row no-gutters">
 						<div class="col-md-3">
 							<div class="card">
-								<img src="images/neighbors.jpg" alt="">
+								<img class="img-fluid" src="images/neighbors.jpg" alt="">
 								<div class="card-img-overlay d-flex flex-column justify-content-end">
 									<h5 class="card-title">Neighbors 2</h5>
 									<div class="row">
@@ -117,7 +117,7 @@
 						</div>
 						<div class="col-md-3">
 							<div class="card">
-								<img src="images/capital.jpg" alt="">
+								<img class="img-fluid" src="images/capital.jpg" alt="">
 								<div class="card-img-overlay d-flex flex-column justify-content-end">
 									<h5 class="card-title">Neighbors 2</h5>
 									<div class="row">
@@ -133,7 +133,7 @@
 						</div>
 						<div class="col-md-3">
 							<div class="card">
-								<img src="images/capital.jpg" alt="">
+								<img class="img-fluid" src="images/capital.jpg" alt="">
 								<div class="card-img-overlay d-flex flex-column justify-content-end">
 									<h5 class="card-title">Inception</h5>
 									<div class="row">
@@ -149,7 +149,7 @@
 						</div>
 						<div class="col-md-3">
 							<div class="card">
-								<img src="images/fury.jpg" alt="">
+								<img class="img-fluid" src="images/fury.jpg" alt="">
 								<div class="card-img-overlay d-flex flex-column justify-content-end">
 									<h5 class="card-title">Fury</h5>
 									<div class="row">
@@ -181,7 +181,7 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12">
-							<table class="table table-borderless">
+							<table class="table table-borderless table-responsive-md">
 								<tr>
 									<td>08:45 AM</td>
 									<td class="text-primary">Neighbors 2: Parenthood vs Sisterhood</td>
