--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<div class="row no-gutters">
 						<div class="col-md-3">
 							<div class="card">
-								<img class="img-fluid" src="images/neighbors.jpg" alt="">
+								<img class="img-fluid" src="images/schedule/neighbors.jpg" alt="">
 								<div class="card-img-overlay d-flex flex-column justify-content-end">
 									<h5 class="card-title">Neighbors 2</h5>
 									<div class="row">
@@ -117,9 +117,9 @@
 						</div>
 						<div class="col-md-3">
 							<div class="card">
-								<img class="img-fluid" src="images/capital.jpg" alt="">
+								<img class="img-fluid" src="images/schedule/moonlight.jpg" alt="">
 								<div class="card-img-overlay d-flex flex-column justify-content-end">
-									<h5 class="card-title">Neighbors 2</h5>
+									<h5 class="card-title">Moonlight</h5>
 									<div class="row">
 										<div class="col-md-6 text-left">
 											<p class="card-text">02:20 AM</p>
@@ -133,7 +133,7 @@
 						</div>
 						<div class="col-md-3">
 							<div class="card">
-								<img class="img-fluid" src="images/capital.jpg" alt="">
+								<img class="img-fluid" src="images/schedule/inception.jpg" alt="">
 								<div class="card-img-overlay d-flex flex-column justify-content-end">
 									<h5 class="card-title">Inception</h5>
 									<div class="row">
@@ -149,7 +149,7 @@
 						</div>
 						<div class="col-md-3">
 							<div class="card">
-								<img class="img-fluid" src="images/fury.jpg" alt="">
+								<img class="img-fluid" src="images/schedule/fury.jpg" alt="">
 								<div class="card-img-overlay d-flex flex-column justify-content-end">
 									<h5 class="card-title">Fury</h5>
 									<div class="row">
