--- a/index.html
+++ b/index.html
@@ -251,10 +251,10 @@
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-md-7 video">
-								<img src="images/batmanwins.png" alt="">
+							<div class="col-lg-7 video">
+								<img class="img-fluid" src="images/batmanwins.png" alt="">
 							</div>
-							<div class="col-md-5">
+							<div class="col-lg-5">
 								<div class="row mb-3">
 									<div class="col-md-12">
 										<h5>Synopsis</h5>
@@ -268,18 +268,18 @@
 									</div>
 								</div>
 								<div class="row">
-									<div class="col-md-6">
+									<div class="col-sm-6">
 										<p><i class="flaticon-calendar mr-3"></i>23 Mar 2017</p>
 									</div>
-									<div class="col-md-6">
+									<div class="col-sm-6">
 										<p><i class="flaticon-placeholder mr-3"></i>IXXV Jember</p>
 									</div>
 								</div>
 								<div class="row">
-									<div class="col-md-6">
+									<div class="col-sm-6">
 										<p><i class="flaticon-clock mr-3"></i>03:30 AM</p>
 									</div>
-									<div class="col-md-6">
+									<div class="col-sm-6">
 										<p><i class="flaticon-cinema mr-3"></i>Studio 1</p>
 									</div>
 								</div>
