fix synopsis slider: issues #6

--- a/index.html
+++ b/index.html
@@ -293,39 +293,29 @@
 				<section class="synopsis-slider">
 					<div class="container">
 						<div class="row">
-							<div class="col-md">
+							<div class="col-lg">
 								<div class="card">
 									<img src="images/synopsis/fight.jpg" alt="">
-									<div class="card-img-overlay">
-									</div>
 								</div>
 							</div>
-							<div class="col-md">
+							<div class="col-lg">
 								<div class="card">
 									<img src="images/synopsis/batman.jpg" alt="">
-									<div class="card-img-overlay">
-									</div>
 								</div>
 							</div>
-							<div class="col-md">
+							<div class="col-lg">
 								<div class="card">
 									<img src="images/synopsis/broken.jpg" alt="">
-									<div class="card-img-overlay">
-									</div>
 								</div>
 							</div>
-							<div class="col-md">
+							<div class="col-lg">
 								<div class="card">
 									<img src="images/synopsis/sevent.jpg" alt="">
-									<div class="card-img-overlay">
-									</div>
 								</div>
 							</div>
-							<div class="col-md">
+							<div class="col-lg">
 								<div class="card">
 									<img src="images/synopsis/siri.jpg" alt="">
-									<div class="card-img-overlay">
-									</div>
 								</div>
 							</div>
 						</div>
