Fix facilites: issues #7

--- a/index.html
+++ b/index.html
@@ -348,10 +348,10 @@
 						<div class="col-md">
 							<div class="card">
 								<div class="row">
-									<div class="col-md-2 d-flex align-items-center">
+									<div class="col-2 d-flex align-items-center">
 										<i class="flaticon flaticon-furniture rounded-circle"></i>
 									</div>
-									<div class="col-md-10">
+									<div class="col-10">
 										<div class="card-body">
 											<h5 class="card-title">Sed ut perspicati</h5>
 											<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -363,10 +363,10 @@
 						<div class="col-md">
 							<div class="card">
 								<div class="row">
-									<div class="col-md-2 d-flex align-items-center">
+									<div class="col-2 d-flex align-items-center">
 										<i class="flaticon flaticon-popcorn rounded-circle"></i>
 									</div>
-									<div class="col-md-10">
+									<div class="col-10">
 										<div class="card-body">
 											<h5 class="card-title">Totam rem aperiam</h5>
 											<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -378,10 +378,10 @@
 						<div class="col-md">
 							<div class="card">
 								<div class="row">
-									<div class="col-md-2 d-flex align-items-center">
+									<div class="col-2 d-flex align-items-center">
 										<i class="flaticon flaticon-wifi-signal rounded-circle"></i>
 									</div>
-									<div class="col-md-10">
+									<div class="col-10">
 										<div class="card-body">
 											<h5 class="card-title">Voluptatem quia</h5>
 											<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
