fix footer for mobile: issues 8

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 					<div class="col-md-3">
 						<h5 class="mb-3">Movie Categories</h5>
 						<div class="row">
-							<div class="col-md-6">
+							<div class="col-6">
 								<ul>
 									<li>Action</li>
 									<li>Adventure</li>
@@ -442,7 +442,7 @@
 									<li>Family</li>
 								</ul>
 							</div>
-							<div class="col-md-6">
+							<div class="col-6">
 								<ul>
 									<li>Biography</li>
 									<li>Crime</li>
