fix table for mobile

--- a/index.html
+++ b/index.html
@@ -181,43 +181,45 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12">
-							<table class="table table-borderless table-responsive-md">
-								<tr>
-									<td>08:45 AM</td>
-									<td class="text-primary">Neighbors 2: Parenthood vs Sisterhood</td>
-									<td>IXXV Jember</td>
-									<td>Studio 1</td>
-									<td class="text-primary">Buy Ticket</td>
-								</tr>
-								<tr>
-									<td>08:45 AM</td>
-									<td class="text-primary">Star Trek</td>
-									<td>IXXV Jember</td>
-									<td>Studio 2</td>
-									<td class="text-primary">Buy Ticket</td>
-								</tr>
-								<tr>
-									<td>09:12 AM</td>
-									<td class="text-primary">Inception</td>
-									<td>IXXV Jakarta</td>
-									<td>Studio 3</td>
-									<td class="text-primary">Buy Ticket</td>
-								</tr>
-								<tr>
-									<td>10:00 AM</td>
-									<td class="text-primary">Neighbors 2: Parenthood vs Sisterhood</td>
-									<td>IXXV Bandung</td>
-									<td>Studio 1</td>
-									<td class="text-primary">Buy Ticket</td>
-								</tr>
-								<tr>
-									<td>03:00 PM</td>
-									<td class="text-primary">Night Fury</td>
-									<td>IXXV Bandung</td>
-									<td>Studio 3</td>
-									<td class="text-primary">Buy Ticket</td>
-								</tr>
-							</table>
+							<div class="table-responsive">
+								<table class="table">
+									<tr>
+										<td>08:45 AM</td>
+										<td class="text-primary">Neighbors 2: Parenthood vs Sisterhood</td>
+										<td>IXXV Jember</td>
+										<td>Studio 1</td>
+										<td class="text-primary">Buy Ticket</td>
+									</tr>
+									<tr>
+										<td>08:45 AM</td>
+										<td class="text-primary">Star Trek</td>
+										<td>IXXV Jember</td>
+										<td>Studio 2</td>
+										<td class="text-primary">Buy Ticket</td>
+									</tr>
+									<tr>
+										<td>09:12 AM</td>
+										<td class="text-primary">Inception</td>
+										<td>IXXV Jakarta</td>
+										<td>Studio 3</td>
+										<td class="text-primary">Buy Ticket</td>
+									</tr>
+									<tr>
+										<td>10:00 AM</td>
+										<td class="text-primary">Neighbors 2: Parenthood vs Sisterhood</td>
+										<td>IXXV Bandung</td>
+										<td>Studio 1</td>
+										<td class="text-primary">Buy Ticket</td>
+									</tr>
+									<tr>
+										<td>03:00 PM</td>
+										<td class="text-primary">Night Fury</td>
+										<td>IXXV Bandung</td>
+										<td>Studio 3</td>
+										<td class="text-primary">Buy Ticket</td>
+									</tr>
+								</table>
+							</div>
 						</div>
 					</div>
 				</div>
