--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
 			<section class="schedule-card">
 				<div class="container">
 					<div class="row mb-3">
-						<div class="col-md-8">
+						<div class="col-6">
 							<h3>Now Playing</h3>
 						</div>
-						<div class="col-md-4 text-right">
+						<div class="col-6 text-right">
 							<p><i class="flaticon-calendar"></i>View Schedule</p>
 						</div>
 					</div>
@@ -270,18 +270,18 @@
 									</div>
 								</div>
 								<div class="row">
-									<div class="col-sm-6">
+									<div class="col-6">
 										<p><i class="flaticon-calendar mr-3"></i>23 Mar 2017</p>
 									</div>
-									<div class="col-sm-6">
+									<div class="col-6">
 										<p><i class="flaticon-placeholder mr-3"></i>IXXV Jember</p>
 									</div>
 								</div>
 								<div class="row">
-									<div class="col-sm-6">
+									<div class="col-6">
 										<p><i class="flaticon-clock mr-3"></i>03:30 AM</p>
 									</div>
-									<div class="col-sm-6">
+									<div class="col-6">
 										<p><i class="flaticon-cinema mr-3"></i>Studio 1</p>
 									</div>
 								</div>
