menambahkan fitur harga pada setiap film

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 								<img class="img-fluid" src="images/schedule/neighbors.jpg" alt="">
 								<div class="card-img-overlay d-flex flex-column justify-content-end">
 									<h5 class="card-title">Neighbors 2</h5>
+									<p class="card-text">50,000 IDR / Ticket</p> <!-- Harga ditambahkan disini -->
 									<div class="row">
 										<div class="col-md-6 text-left">
 											<p class="card-text">02:20 AM</p>
@@ -120,6 +121,7 @@
 								<img class="img-fluid" src="images/schedule/moonlight.jpg" alt="">
 								<div class="card-img-overlay d-flex flex-column justify-content-end">
 									<h5 class="card-title">Moonlight</h5>
+									<p class="card-text">50,000 IDR / Ticket</p> <!-- Harga ditambahkan disini -->
 									<div class="row">
 										<div class="col-md-6 text-left">
 											<p class="card-text">02:20 AM</p>
@@ -136,6 +138,7 @@
 								<img class="img-fluid" src="images/schedule/inception.jpg" alt="">
 								<div class="card-img-overlay d-flex flex-column justify-content-end">
 									<h5 class="card-title">Inception</h5>
+									<p class="card-text">50,000 IDR / Ticket</p> <!-- Harga ditambahkan disini -->
 									<div class="row">
 										<div class="col-md-6 text-left">
 											<p class="card-text">02:20 AM</p>
@@ -152,6 +155,7 @@
 								<img class="img-fluid" src="images/schedule/fury.jpg" alt="">
 								<div class="card-img-overlay d-flex flex-column justify-content-end">
 									<h5 class="card-title">Fury</h5>
+									<p class="card-text">50,000 IDR / Ticket</p> <!-- Harga ditambahkan disini -->
 									<div class="row">
 										<div class="col-md-6 text-left">
 											<p class="card-text">07:45 PM</p>
@@ -188,6 +192,7 @@
 										<td class="text-primary">Neighbors 2: Parenthood vs Sisterhood</td>
 										<td>IXXV Jember</td>
 										<td>Studio 1</td>
+										<td class="text-primary">50,000 IDR</td> <!-- Harga ditambahkan disini -->
 										<td class="text-primary">Buy Ticket</td>
 									</tr>
 									<tr>
@@ -195,6 +200,7 @@
 										<td class="text-primary">Star Trek</td>
 										<td>IXXV Jember</td>
 										<td>Studio 2</td>
+										<td class="text-primary">50,000 IDR</td> <!-- Harga ditambahkan disini -->
 										<td class="text-primary">Buy Ticket</td>
 									</tr>
 									<tr>
@@ -202,6 +208,7 @@
 										<td class="text-primary">Inception</td>
 										<td>IXXV Jakarta</td>
 										<td>Studio 3</td>
+										<td class="text-primary">50,000 IDR</td> <!-- Harga ditambahkan disini -->
 										<td class="text-primary">Buy Ticket</td>
 									</tr>
 									<tr>
@@ -209,6 +216,7 @@
 										<td class="text-primary">Neighbors 2: Parenthood vs Sisterhood</td>
 										<td>IXXV Bandung</td>
 										<td>Studio 1</td>
+										<td class="text-primary">50,000 IDR</td> <!-- Harga ditambahkan disini -->
 										<td class="text-primary">Buy Ticket</td>
 									</tr>
 									<tr>
@@ -216,6 +224,7 @@
 										<td class="text-primary">Night Fury</td>
 										<td>IXXV Bandung</td>
 										<td>Studio 3</td>
+										<td class="text-primary">50,000 IDR</td> <!-- Harga ditambahkan disini -->
 										<td class="text-primary">Buy Ticket</td>
 									</tr>
 								</table>
