menambahkan fitur kursi dan harga

--- a/index.html
+++ b/index.html
@@ -299,6 +299,34 @@
 					</div>
 				</section>
 				<!-- Synopsis Overview End -->
+				<section id="seat-selection">
+				    <div class="container">
+				        <h5 class="mb-4">Choose Your Seat</h5>
+				        <div class="row justify-content-center">
+				            <div class="col-md-8">
+				                <div class="seat-layout">
+				                    <div class="row">
+				                        <!-- Kursi akan ditampilkan di sini -->
+				                        <div class="col-1 seat available" data-seat="A1">A1</div>
+				                        <div class="col-1 seat booked" data-seat="A2">A2</div>
+				                        <div class="col-1 seat available" data-seat="A3">A3</div>
+				                        <div class="col-1 seat available" data-seat="A4">A4</div>
+				                        <div class="col-1 seat available" data-seat="A5">A5</div>
+				                    </div>
+				                    <div class="row">
+				                        <div class="col-1 seat available" data-seat="B1">B1</div>
+				                        <div class="col-1 seat available" data-seat="B2">B2</div>
+				                        <div class="col-1 seat booked" data-seat="B3">B3</div>
+				                        <div class="col-1 seat available" data-seat="B4">B4</div>
+				                        <div class="col-1 seat available" data-seat="B5">B5</div>
+				                    </div>
+				                </div>
+				                <button class="btn btn-primary mt-3" id="confirm-seats">Confirm Selection</button>
+				            </div>
+				        </div>
+				    </div>
+				</section>
+
 
 				<!-- Synopsis Slider -->
 				<section class="synopsis-slider">
